--- a/index.html
+++ b/index.html
@@ -7,3 +7,21 @@
     <!-- Write your HTML in this file -->
   </body>
 </html>
+<ul>
+  <li>2 slices of bread</li>
+<li>4 slices of cheese
+  <ul>
+    <li>cheddar</li>
+    <li>mozzarella</li>
+    <li>pepper</li>
+  </ul>
+</li>
+<li>1 tbsp of butter</li></ul>
+
+<ol>
+  <li>1.Spread butter on bread and frying pan</li>
+<li>2.Place bread in frying pan and fry</li>
+<li>3.Add cheese on top of bread</li>
+<li>4.Cover with second slice of bread</li>
+<li>Turn over and fry for 2 minutes</li>
+</ol>
